--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li class="navbar-item">
               <a class="has-text-white" href="/">
                   <span class="icon">
-                    <i class="fa fa-home"></i>
+                    <i aria-hidden="true" class="fa fa-home"></i>
                   </span>
                 <span>Home</span>
               </a>
@@ -65,7 +65,7 @@
             <li class="navbar-item">
               <a class="has-text-white" href="/">
                   <span class="icon">
-                    <i class="fab fa-superpowers"></i>
+                    <i aria-hidden="true" class="fab fa-superpowers"></i>
                   </span>
                 <span>Examples</span>
               </a>
@@ -73,7 +73,7 @@
             <li class="navbar-item">
               <a class="has-text-white" href="/">
                   <span class="icon">
-                    <i class="fa fa-book"></i>
+                    <i aria-hidden="true" class="fa fa-book"></i>
                   </span>
                 <span>Documentation</span>
               </a>
@@ -81,7 +81,7 @@
             <li class="navbar-item">
               <a class="has-text-white" href="/">
                   <span class="icon">
-                    <i class="fab fa-github"></i>
+                    <i aria-hidden="true" class="fab fa-github"></i>
                   </span>
                 <span>View Source</span>
               </a>
@@ -121,9 +121,9 @@
   <div class="container">
     <nav aria-label="breadcrumbs">
       <ol class="breadcrumbs">
-        <li><a href="/">Home</a><i class="fas fa-chevron-right"></i></li>
-        <li><a href="/">Breadcrumb one</a><i class="fas fa-chevron-right"></i></li>
-        <li><a href="/">Breadcrumb two</a><i class="fas fa-chevron-right"></i></li>
+        <li><a href="/">Home</a><i aria-hidden="true" class="fas fa-chevron-right"></i></li>
+        <li><a href="/">Breadcrumb one</a><i aria-hidden="true" class="fas fa-chevron-right"></i></li>
+        <li><a href="/">Breadcrumb two</a><i aria-hidden="true" class="fas fa-chevron-right"></i></li>
         <li><a aria-current="page" href="">Breadcrumb three</a></li>
       </ol>
     </nav>
@@ -268,7 +268,7 @@
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image has-text-centered">
-              <i class="fa fa-paw"></i>
+              <i aria-hidden="true" class="fa fa-paw"></i>
             </div>
             <div class="card-content">
               <div class="content">
@@ -285,7 +285,7 @@
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image has-text-centered">
-              <i class="fab fa-empire"></i>
+              <i aria-hidden="true" class="fab fa-empire"></i>
             </div>
             <div class="card-content">
               <div class="content">
@@ -304,7 +304,7 @@
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image has-text-centered">
-              <i class="fab fa-apple"></i>
+              <i aria-hidden="true" class="fab fa-apple"></i>
             </div>
             <div class="card-content">
               <div class="content">
@@ -331,15 +331,15 @@
     <div aria-labelledby="topics" class="tabs is-boxed is-centered main-menu" id="nav" role="tablist">
       <button aria-controls="pane-1" aria-selected="true" class="tab is-active" role="tab"
               tabindex="0" type="button">
-        <span class="icon is-small"><i class="fa fa-image"></i></span>
+        <span class="icon is-small"><i aria-hidden="true" class="fa fa-image"></i></span>
         <span>Pictures</span>
       </button>
       <button aria-controls="pane-2" aria-selected="false" class="tab" role="tab" type="button">
-        <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
+        <span class="icon is-small"><i aria-hidden="true" class="fab fa-superpowers"></i></span>
         <span>Team</span>
       </button>
       <button aria-controls="pane-3" aria-selected="false" class="tab" role="tab" type="button">
-        <span class="icon is-small"><i class="fa fa-film"></i></span>
+        <span class="icon is-small"><i aria-hidden="true" class="fa fa-film"></i></span>
         <span>Video</span>
       </button>
     </div>
@@ -421,7 +421,7 @@
         <div class="column">
           <div class="media">
             <div class="media-left">
-              <i class="fab fa-github-square fa-4x"></i>
+              <i aria-hidden="true" class="fab fa-github-square fa-4x"></i>
             </div>
             <div class="media-content">
               <div class="content">
@@ -435,7 +435,7 @@
           </div>
           <div class="media">
             <div class="media-left">
-              <i class="fab fa-empire fa-4x"></i>
+              <i aria-hidden="true" class="fab fa-empire fa-4x"></i>
             </div>
             <div class="media-content">
               <div class="content">
@@ -451,7 +451,7 @@
         <div class="column">
           <div class="media">
             <div class="media-left">
-              <i class="fab fa-ravelry fa-4x"></i>
+              <i aria-hidden="true" class="fab fa-ravelry fa-4x"></i>
             </div>
             <div class="media-content">
               <div class="content">
@@ -465,7 +465,7 @@
           </div>
           <div class="media">
             <div class="media-left">
-              <i class="fab fa-github-alt fa-4x"></i>
+              <i aria-hidden="true" class="fab fa-github-alt fa-4x"></i>
             </div>
             <div class="media-content">
               <div class="content">
@@ -486,8 +486,8 @@
         <div class="column is-three-quarters">
           <div class="title has-text-centered" id="video-tab">Inspired video</div>
           <div class="embed-container image">
-            <iframe title="video about norway" allowFullScreen frameborder="0" mozallowfullscreen
-                    src="https://player.vimeo.com/video/261794608" webkitAllowFullScreen></iframe>
+            <iframe allowFullScreen frameborder="0" mozallowfullscreen src="https://player.vimeo.com/video/261794608"
+                    title="video about norway" webkitAllowFullScreen></iframe>
           </div>
         </div>
       </div>
@@ -839,7 +839,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 1</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 1</span>
                 </div>
               </div>
             </div>
@@ -861,7 +861,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 0</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 0</span>
                 </div>
               </div>
             </div>
@@ -883,7 +883,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 13</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 13</span>
                 </div>
               </div>
             </div>
@@ -905,7 +905,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -927,7 +927,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -949,7 +949,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i aria-hidden="true" class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -979,10 +979,10 @@
           <div class="control has-icons-left has-icons-right">
             <input aria-invalid="false" class="input is-success" id="username" type="text">
             <span class="icon is-small is-left">
-                <i class="fas fa-user"></i>
+                <i aria-hidden="true" class="fas fa-user"></i>
               </span>
             <span class="icon is-small is-right">
-                <i class="fas fa-check"></i>
+                <i aria-hidden="true" class="fas fa-check"></i>
               </span>
           </div>
           <p class="help is-success">This username is available</p>
@@ -994,10 +994,10 @@
             <input aria-invalid="true" class="input is-danger" id="email" placeholder="Email input" type="email"
                    value="hello@">
             <span class="icon is-small is-left">
-                <i class="fas fa-envelope"></i>
+                <i aria-hidden="true" class="fas fa-envelope"></i>
               </span>
             <span class="icon is-small is-right">
-                <i class="fas fa-exclamation-triangle"></i>
+                <i aria-hidden="true" class="fas fa-exclamation-triangle"></i>
               </span>
           </div>
           <p class="help is-danger">This email is invalid</p>
