git hub comments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 aria-haspopup="true"
                 class="button"
                 id="skip-to-button"
-                tabindex="0"
                 type="button">
                 skip to
               </button>
@@ -827,7 +826,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=300">
+                    <img alt="avatar of user jsmith" src="https://source.unsplash.com/random/64x64/?sig=300">
                   </p>
                 </div>
                 <div class="media-content">
@@ -849,7 +848,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=301">
+                    <img alt="avatar of user red" src="https://source.unsplash.com/random/64x64/?sig=301">
                   </p>
                 </div>
                 <div class="media-content">
@@ -871,7 +870,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=302">
+                    <img alt="avatar of user brown" src="https://source.unsplash.com/random/64x64/?sig=302">
                   </p>
                 </div>
                 <div class="media-content">
@@ -893,7 +892,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=303">
+                    <img alt="avatar of user brown" src="https://source.unsplash.com/random/64x64/?sig=303">
                   </p>
                 </div>
                 <div class="media-content">
@@ -915,7 +914,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=304">
+                    <img alt="avatar of user hamburgler" src="https://source.unsplash.com/random/64x64/?sig=304">
                   </p>
                 </div>
                 <div class="media-content">
@@ -937,7 +936,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=305">
+                    <img alt="avatar of user rapper" src="https://source.unsplash.com/random/64x64/?sig=305">
                   </p>
                 </div>
                 <div class="media-content">
