--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,8 @@
   <div class="container">
     <div class="columns">
       <div class="column is-3 is-offset-2">
-        <h1 class="is-3 title"><b>Lessons</b></h1>
+        <h1 class="visually-hidden">Footer</h1>
+        <h2 class="is-3 title"><b>Lessons</b></h2>
         <ul>
           <li><a href="/">Lorem ipsum dolor sit amet</a></li>
           <li><a href="/">Vestibulum errato isse</a></li>
@@ -1073,7 +1074,7 @@
         </ul>
       </div>
       <div class="column is-3">
-        <h1 class="is-3 title"><b>News</b></h1>
+        <h2 class="is-3 title"><b>News</b></h2>
         <ul>
           <li><a href="/">Labore et dolore magna aliqua</a></li>
           <li><a href="/">Kanban airis sum eschelor</a></li>
@@ -1085,7 +1086,7 @@
         </ul>
       </div>
       <div class="column is-4">
-        <h1 class="is-3 title"><b>Help</b></h1>
+        <h2 class="is-3 title"><b>Help</b></h2>
         <ul>
           <li><a href="/">Objects in space</a></li>
           <li><a href="/">Playing cards with coyote</a></li>
