add keyboard a11y to cards

--- a/index.html
+++ b/index.html
@@ -353,8 +353,10 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img alt="person holding remote control device" class="modal-button" data-target="modal-image1"
-                       src="./img/tab-1.jpg">
+                  <img alt="person holding remote control device"
+                       id="modal-image1-clickable" role="button"
+                       src="./img/tab-1.jpg"
+                       tabindex="0">
                 </div>
               </div>
               <div class="card-content">
@@ -365,7 +367,7 @@
                     enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat
                     semper
                     viverra nam.</p>
-                  <button class="button is-link modal-button" data-target="modal-image1" id="modal-image1-button">Image
+                  <button class="button is-link" data-target="modal-image1" id="modal-image1-button">Image
                     modal<span class="visually-hidden">. opens dialog</span></button>
                 </div>
               </div>
@@ -385,13 +387,13 @@
                     non odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu
                     songue. Phasellus vestibulum lorem
                     sed risus.</p>
-                  <button class="button is-link modal-button" data-target="modal-card" id="modal-card-button">Modal Card
+                  <button class="button is-link" id="modal-card-button">Modal Card
                     <span class="visually-hidden">. opens dialog</span></button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="column is-4 modal-button" data-target="modal-image">
+          <div class="column is-4" id="modal-image2-clickable" role="button" tabindex="0">
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
@@ -405,7 +407,7 @@
                   <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque
                     dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan
                     lacus vel facilisis.</p>
-                  <button class="button is-link modal-button" data-target="modal-image2" id="modal-image2-button">Image
+                  <button class="button is-link" id="modal-image2-button">Image
                     modal <span class="visually-hidden">. opens dialog</span></button>
                 </div>
               </div>
